src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
@import "primeicons/primeicons.css";

@tailwind components;
@tailwind utilities;
@tailwind base;

@layer reset, primeng;

:root {
    --border-color: #e5e7eb;
    --border-radius-input: 8px;
}

* {
    font-family: "Inter", sans-serif;
    box-sizing: border-box;
}

body {
    background-color: #fbfbfb;
}

*:focus-visible {
    outline: 0;
}

.content-container {
    width: 100%;
    max-width: 1400px;
    margin: 2.5rem auto;
}

.auth-inputs {
    @apply border border-l-0 border-gray-200 w-full py-3 px-0 rounded-tl-none rounded-bl-none rounded-tr-lg rounded-br-lg;
}

